Major refactor to update to Java 21 language features, including record pattern matching in switch and instanceOf. Remove all pre-Java 8/16 boilerplate where possible. e.g. convert all data classes to records. This update also updates the core classes to use a similar API where foo.getBar() is now just foo.bar(), which generally reads better and requires fewer characters. Added initial parquet output file implementation.